RESOLVED FIXED153836
Fix BlockPtr's call operator
https://bugs.webkit.org/show_bug.cgi?id=153836
Summary Fix BlockPtr's call operator
Anders Carlsson
Reported 2016-02-03 10:18:42 PST
Fix BlockPtr's call operator
Attachments
Patch (1.07 KB, patch)
2016-02-03 10:19 PST, Anders Carlsson
enrica: review+
Anders Carlsson
Comment 1 2016-02-03 10:19:29 PST
Anders Carlsson
Comment 2 2016-02-03 10:21:05 PST
Note You need to log in before you can comment on or make changes to this bug.