Fix BlockPtr's call operator https://bugs.webkit.org/show_bug.cgi?id=153836

Reviewed by Enrica Casucci.

* wtf/BlockPtr.h:

Canonical link: https://commits.webkit.org/171928@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196071 268f45cc-cd09-0410-ab3c-d52691b4dbfc