Source/WTF/wtf/BlockPtr.h
@@ -84,7 +84,7 @@ public:
     explicit operator bool() const { return m_block; }
     bool operator!() const { return !m_block; }
 
-    R operator()(Args&&... arguments) const
+    R operator()(Args... arguments) const
     {
         ASSERT(m_block);
         
